# taskmanager

./: Cargo.toml  description.txt
taskmanager_server/: Cargo.toml  main.rs
taskmanager_server/rest/: handlers.rs  routes.rs
taskmanager_server/system/: mod.rs  system_meta.rs
taskmanager_ui/: README.md  package-lock.json  package.json
taskmanager_ui/src/: App.vue  main.ts
taskmanager_ui/src/apps/: SystemMetaInformationApp.vue  TaskManagerApp.vue
taskmanager_ui/src/composables/: useSystemMetaInfo.ts
taskmanager_ui/src/types/: metaInfo.d.ts
