[package]
name = "taskmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30.7"
byte-unit = "5.1.4"
warp = "0.3.6"
parking_lot = "0.12.1"
tokio = {version = "1.36.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }

maplit = "1.0"

[[bin]]
name = "taskmanager"
path = "main.rs"
